CHANGELOG fuer c't-Bot
======================
2007-12-07 Timo Sandmann [mail@timosandmann.de]: Bot-Code laueft jetzt auch vollstaendig unter PowerPC, Remote-Call-Code fuer MCU optimiert

2007-12-06 Timo Sandmann [mail@timosandmann.de]: Remote-Call-Verhalten einfacher implementiert

2007-12-06 Timo Sandmann [mail@timosandmann.de]: Bugfix im LOG-Code (interne Variable "data" in "__data" umbenannt)

2007-11-30 Harald W. Leschner [hari@h9l.net]: Treiber fuer Sprachmodul SP03 hinzugefuegt

2007-11-28 Timo Sandmann [mail@timosandmann.de]: Bugfix im UART-Code fuer ATmega644 und 115200 Baud

2007-11-14 Frank Menzel [Menzelfr@gmx.net]: behaviour_transport_pillar: Anzeigewerte fuer Display von float nach int16 geaendert

2007-11-12 Frank Menzel [Menzelfr@gmx.net]: behaviour_transport_pillar: Bot faehrt zwischen Start- und Zielpos. hin und her und kann dabei Dosen fangen und transportieren; die bisher diversen Fahrverhalten sind hier unter einem Dach vereint und via Defines waehlbar

2007-11-11 Timo Sandmann [mail@timosandmann.de]: Datentypen in command.c korrigiert

2007-11-11 Harald W. Leschner [hari@h9l.net]: Kleinere Korrekturen und gnuplot- / LaTeX-Script zur Speedlog-Auswertung hinzugefuegt (siehe contrib/Tools) 

2007-11-08 Timo Sandmann [mail@timosandmann.de]: Ausgabe von avr-size im Postbuild korrigiert (EEPROM-Daten liegen nicht in .data)

2007-11-07 Timo Sandmann [mail@timosandmann.de]: Architekturabhaengigen Remote-Call-Code fuer AMD64 / Intel 64 ergaenzt (64 Bit Version ungetestet!)

2007-11-07 Timo Sandmann [mail@timosandmann.de]: Bugfix fuer SRF10-Treiber und Doxygenwarnings beseitigt

2007-11-06 Timo Sandmann [mail@timosandmann.de]: EEPROM-Emulation per #define abschaltbar gemacht (default ist AN) und unter Mac OS X 10.5 deaktiviert (vgl. #151)
