@@ -25,12 +25,29 @@
  */
 
 
+/*!
+ * bot_gotoxy() beruecksichtig keine waehrend der Fahrt aufgetretenen Fehler, daher ist die
+ * Endposition nicht unbedingt auch die gewuenschte Position des Bots. Das komplexere Verhalten
+ * bot_goto_pos() arbeitet hier deutlich genauer, darum werden jetzt alle bot_gotoxy()-Aufrufe
+ * auf das goto_pos-Verhalten "umgeleitet", falls dieses vorhanden ist. 
+ * Moechte man das jedoch nicht und lieber weiterhin das alte bot_gotxy-Verhalten, deaktiviert 
+ * man den Schalter USE_GOTO_POS_XY ein paar Zeilen unter diesem Text, indem man ihm // voranstellt. 
+ */
+
 #ifndef BEHAVIOUR_GOTOXY_H_
 #define BEHAVIOUR_GOTOXY_H_
 
 #include "bot-logic/bot-logik.h"
 
+#define USE_GOTO_POS_XY	/*!< Ersetzt alle goto_xy()-Aufrufe mit dem goto_pos-Verhalten, falls vorhanden */
+
+
+#ifndef BEHAVIOUR_GOTO_POS_AVAILABLE
+#undef USE_GOTO_POS_XY
+#endif
+
 #ifdef BEHAVIOUR_GOTOXY_AVAILABLE
+#ifndef USE_GOTO_POS_XY
 /*!
  * Das Verhalten faehrt von der aktuellen Position zur angegebenen Position (x/y)
  * @param *data der Verhaltensdatensatz
@@ -45,5 +62,12 @@ void bot_gotoxy_behaviour(Behaviour_t *data);
  * @param y Y-Ordinate an die der Bot fahren soll
  */
 void bot_gotoxy(Behaviour_t *caller, float x, float y);
+
+#else	// USE_GOTO_POS_XY
+/* wenn goto_pos() vorhanden und USE_GOTO_POS_XY an ist, leiten wir alle goto_xy()-Aufrufe dorthin um */
+#undef BEHAVIOUR_GOTOXY_AVAILABLE
+#define bot_gotoxy(caller, x, y)	bot_goto_pos(caller, x, y, 999)
+#endif	// USE_GOTO_POS_XY
+
 #endif	// BEHAVIOUR_GOTOXY_AVAILABLE
 #endif	/*BEHAVIOUR_GOTOXY_H_*/
